...

            <CheckBox
                android:id="@+id/flat_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/townhouse_checkbox"
                app:layout_constraintHorizontal_weight="0.5"
                android:text="@string/property_type_flat" />
...
                android:text="@string/property_type_townhouse" />
            <CheckBox
                android:id="@+id/penthouse_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/house_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/flat_checkbox"
                app:layout_constraintStart_toStartOf="parent"
...
                android:text="@string/property_type_house" />
            <CheckBox
                android:id="@+id/duplex_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/in_sale_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/for_rent_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/sold_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/in_sale_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/for_rent_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sold_entry_date_text_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sold_date_text_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/min_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/max_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/min_surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/max_surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/min_rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
