<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/browse_fragment"
    android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            app:titleTextColor="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/result_list_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/result_detail_nav_fragment"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    app:defaultNavHost="false" />

                <include
                    android:id="@+id/segmentedcontrol"
                    layout="@layout/layout_segmented_control"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    />
        </FrameLayout>
</LinearLayout>