...
    <string name="min_surface">Minimum Surface</string>
    <string name="max_surface">Maximum Surface</string>
    <string name="min_rooms">Minimum Rooms</string>
    <string name="max_rooms">Maximum Rooms</string>
    <string name="all_property_type">All Type</string>
    <string name="all_property_status">All Status</string>
    <string name="no_property_found">No Property Found</string>
    <string name="currency">Currency</string>
    <string name="default_currency">Default Currency</string>
    <string name="choose_default_currency">Choose default currency</string>
    <string name="settings">Settings</string>
    <string name="update_location">Update Location</string>
    <string name="search_location_hint">Search by address, street, city, postal code or country</string>
...
